# aries

./: .gitattributes  .gitignore  AGENTS.md  BUILDING_MACOS.md  BUILDING_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  ImageDraw.py  ImageFont.py  Makefile  Morinus.macos.spec  Morinus.spec  Q  README.md  RELEASE_CHECKLIST.md  almutenchartwnd.py  almutentopicalswnd.py  almutenzodswnd.py  angleatbirthwnd.py  antiscia.py  antisciawnd.py  appearance1dlg.py  arabicparts.py  arabicpartsdlg.py  arabicpartswnd.py  aspectswnd.py  asteroids.py  asteroidswnd.py  astrology.py  chart.py  chart_session.py  chartalerts.py  circumambulation.py  circumambulationframe.py  colorsdlg.py  common.py  commonwnd.py  customerwnd.py  (+100 more)
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-macos.yml
Hors/: Morinus.hor
Opts/: almutentopicalandparts.opt  appearance1.opt  appearance2.opt  deflocation.opt  primarydirs.opt
Res/: Morinus.icns
SWEP/Ephem/: fixstar_aliases.json
SWEP/src/: astrologymodule.c  setup.py
scripts/: build_macos_app.sh  build_macos_release.sh  build_sweastrology.sh  build_windows_exe.ps1
tests/: test_keyboard_layers.py  test_revolutions.py  test_searchquery.py  test_util.py  test_workspace_model.py
tools/: audit_deps.py  wip_backup.sh
