[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morinus"
version = "0.0.0"
description = "Morinus - traditional astrology program (local build)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
  "wxPython>=4.2.0",
]

[project.optional-dependencies]
geo = [
  "timezonefinder>=6.0",
]
opt = [
  "numpy>=2.0",
]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
  "setuptools>=61",
  "wheel",
  "fonttools>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
